--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-02-feedback",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Kolesanencore/goit-react-hw-02-feedback/",
+  "homepage": "https://kolesanencore.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.0",
